Fixes some align issues on Calendar, Gantt, Files section from issue page and on mobile version (#23980).
git-svn-id: https://svn.redmine.org/redmine/trunk@23093 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1667,6 +1667,7 @@ td.gantt_selected_column .gantt_hdr,.gantt_selected_column_container {
 .icon, .icon-only {
   display: inline-flex;
   align-items: center;
+  vertical-align: middle;
 }
 
 a.icon:hover svg, a.icon-only:hover svg {
@@ -1699,6 +1700,7 @@ svg {
     stroke: #169;
     fill: none;
     stroke-width: 1.5;
+    vertical-align: middle;
   }
 
   &.s20 {
